fixed dark mode issues

--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,6 @@
 .button:link, .button:visited {
-  background-color: black;
-  color: white;
+   background-color: var(--bg-highlight);
+  color: inherit;
   padding: 14px 25px;
   text-align: center;
   text-decoration: none;
@@ -10,18 +10,19 @@
 }
 
 .button:hover, .button:active {
-  background-color:  black;
-  color: white;
+   background-color: var(--bg-highlight);
+  color:inherit;
 }
 
 blockquote {
     font-size: 1.5em;
     font-style: italic;
-    color: #333;
+   
     margin: 20px 0;
     padding: 10px 20px;
     border-left: 5px solid #ccc;
-    background-color: #f9f9f9;
+    background-color: var(--bg-highlight);
+  color: inherit;
 }
 
 blockquote:before {
